# otfftpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
inc/: otfft.h  otfft_complex.h  otfft_types.h
include/: otfft_avxdif16.h  otfft_avxdif16omp.h  otfft_avxdif4.h  otfft_avxdif4omp.h  otfft_avxdif8.h  otfft_avxdif8omp.h  otfft_avxdit16.h  otfft_avxdit16omp.h  otfft_avxdit4.h  otfft_avxdit4omp.h  otfft_avxdit8.h  otfft_avxdit8omp.h  otfft_base.h  otfft_eightstep.h  otfft_factory.h  otfft_if.h  otfft_misc.h  otfft_mixedradix.h  otfft_sixstep.h
include/otfftpp/: otfft.h  otfft_complex.h  otfft_fwd.h
include/otfftpp/detail/: otfft_avxdif16.h  otfft_avxdif16omp.h  otfft_avxdif4.h  otfft_avxdif4omp.h  otfft_avxdif8.h  otfft_avxdif8omp.h  otfft_avxdit16.h  otfft_avxdit16omp.h  otfft_avxdit4.h  otfft_avxdit4omp.h  otfft_avxdit8.h  otfft_avxdit8omp.h  otfft_base.h  otfft_eightstep.h  otfft_if.h  otfft_misc.h  otfft_mixedradix.h  otfft_sixstep.h
src/: otfft.cpp  otfft_algo.cpp  otfft_algo_dif16.cpp  otfft_algo_dif4.cpp  otfft_algo_dif8.cpp  otfft_algo_dit16.cpp  otfft_algo_dit4.cpp  otfft_algo_dit8.cpp  otfft_algo_mixed.cpp  otfft_algo_sixstep.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  otfft_basic_test.cpp  otfft_bluestein_test.cpp  otfft_dct_test.cpp  otfft_find_peak_test.cpp  otfft_optimization_test.cpp  otfft_print_vectorization.cpp  otfft_test_utils.h  otfft_transform_test.cpp
